Add configurations for calling cloudflare DNS API

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,18 @@
 logging:
   level:
     root: info
+
+cloudflare-client:
+  dns:
+    api-token:
+
+cpa:
+  ddns:
+    enable: false
+    ip-provider:
+    targets:
+      - zone-id:
+        name:
+        type:
+        proxied:
+
